--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@padolabs/pado-ao-sdk": "^0.1.0",
+    "antd": "^5.17.4",
+    "arweave": "^1.15.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tslib": "^2.6.2"
